-------------------------------------------------------------------------------

 2 Apr 2009 :  Version 0.9 (beta).

29 Apr 2009:   Corrected two errors, added earlier detection of completion.

11 Apr 2009:   "New style" coinduction.

-------------------------------------------------------------------------------